// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PricingPlan rendering tests PricingPlan - tier BASIC - test 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm relative"
    data-slot="card"
    data-testid="pricing-plan"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="font-semibold text-2xl"
        data-slot="card-title"
      >
        name-1
      </div>
      <div
        class="text-muted-foreground text-sm"
        data-slot="card-description"
      >
        description-1
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="mb-6"
      >
        <span
          class="text-4xl font-bold"
        >
          CHF 
          9.99
        </span>
        <span
          class="text-muted-foreground"
        >
          /
          month
        </span>
      </div>
      <ul
        class="space-y-3"
        data-testid="features"
      >
        <li
          class="flex items-start"
          data-testid="feature"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mt-0.5 mr-2 h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            Bis zu 5 Prompts
          </span>
        </li>
        <li
          class="flex items-start"
          data-testid="feature"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mt-0.5 mr-2 h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            Bis zu 3 Bibliotheks-Einträge
          </span>
        </li>
      </ul>
    </div>
    <div
      class="flex items-center px-6 [.border-t]:pt-6"
      data-slot="card-footer"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
        data-slot="button"
        data-testid="activate-subscription-btn"
      >
        Subscribe
      </button>
    </div>
  </div>
</div>
`;

exports[`PricingPlan rendering tests PricingPlan - tier FREE - current false - test 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm relative"
    data-slot="card"
    data-testid="pricing-plan"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="font-semibold text-2xl"
        data-slot="card-title"
      >
        name-1
      </div>
      <div
        class="text-muted-foreground text-sm"
        data-slot="card-description"
      >
        description-1
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="mb-6"
      >
        <span
          class="text-4xl font-bold"
        >
          CHF 
          9.99
        </span>
      </div>
      <ul
        class="space-y-3"
        data-testid="features"
      >
        <li
          class="flex items-start"
          data-testid="feature"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mt-0.5 mr-2 h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            Bis zu 5 Prompts
          </span>
        </li>
        <li
          class="flex items-start"
          data-testid="feature"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mt-0.5 mr-2 h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            Bis zu 3 Bibliotheks-Einträge
          </span>
        </li>
        <li
          class="flex items-start"
          data-testid="feature"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mt-0.5 mr-2 h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            Access to marketplace
          </span>
        </li>
      </ul>
    </div>
    <div
      class="flex items-center px-6 [.border-t]:pt-6"
      data-slot="card-footer"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
        data-slot="button"
        data-testid="free-btn"
        disabled=""
      >
        Kostenlos starten
      </button>
    </div>
  </div>
</div>
`;

exports[`PricingPlan rendering tests PricingPlan - tier FREE - current true - test 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm relative"
    data-slot="card"
    data-testid="pricing-plan"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="font-semibold text-2xl"
        data-slot="card-title"
      >
        name-1
      </div>
      <div
        class="text-muted-foreground text-sm"
        data-slot="card-description"
      >
        description-1
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="mb-6"
      >
        <span
          class="text-4xl font-bold"
        >
          CHF 
          9.99
        </span>
      </div>
      <ul
        class="space-y-3"
        data-testid="features"
      >
        <li
          class="flex items-start"
          data-testid="feature"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mt-0.5 mr-2 h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            Bis zu 5 Prompts
          </span>
        </li>
        <li
          class="flex items-start"
          data-testid="feature"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mt-0.5 mr-2 h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            Bis zu 3 Bibliotheks-Einträge
          </span>
        </li>
        <li
          class="flex items-start"
          data-testid="feature"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mt-0.5 mr-2 h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            Access to marketplace
          </span>
        </li>
      </ul>
    </div>
    <div
      class="flex items-center px-6 [.border-t]:pt-6"
      data-slot="card-footer"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
        data-slot="button"
        data-testid="free-btn"
        disabled=""
      >
        Current Plan
      </button>
    </div>
  </div>
</div>
`;

exports[`PricingPlan rendering tests PricingPlan - tier PRO - test 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 relative border-primary shadow-lg"
    data-slot="card"
    data-testid="pricing-plan"
  >
    <span
      class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground [a&]:hover:bg-primary/90 absolute -top-3 left-1/2 -translate-x-1/2"
      data-slot="badge"
      data-testid="popular-badge"
    >
      Most Popular
    </span>
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <div
        class="font-semibold text-2xl"
        data-slot="card-title"
      >
        name-1
      </div>
      <div
        class="text-muted-foreground text-sm"
        data-slot="card-description"
      >
        description-1
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
    >
      <div
        class="mb-6"
      >
        <span
          class="text-4xl font-bold"
        >
          CHF 
          99.99
        </span>
        <span
          class="text-muted-foreground"
        >
          /
          year
        </span>
      </div>
      <ul
        class="space-y-3"
        data-testid="features"
      >
        <li
          class="flex items-start"
          data-testid="feature"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mt-0.5 mr-2 h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            Unbegrenzte Prompts
          </span>
        </li>
        <li
          class="flex items-start"
          data-testid="feature"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mt-0.5 mr-2 h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            Unbegrenzte Bibliotheks-Einträge
          </span>
        </li>
        <li
          class="flex items-start"
          data-testid="feature"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mt-0.5 mr-2 h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            Access to marketplace
          </span>
        </li>
        <li
          class="flex items-start"
          data-testid="feature"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mt-0.5 mr-2 h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            Purchase premium items
          </span>
        </li>
        <li
          class="flex items-start"
          data-testid="feature"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mt-0.5 mr-2 h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            Prompts exportieren
          </span>
        </li>
        <li
          class="flex items-start"
          data-testid="feature"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check mt-0.5 mr-2 h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
          <span>
            Erweiterte Funktionen
          </span>
        </li>
      </ul>
    </div>
    <div
      class="flex items-center px-6 [.border-t]:pt-6"
      data-slot="card-footer"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
        data-slot="button"
        data-testid="current-btn"
        disabled=""
      >
        Current Plan
      </button>
    </div>
  </div>
</div>
`;
